; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/panel/extr_panel-lvds.c_panel_lvds_enable.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/panel/extr_panel-lvds.c_panel_lvds_enable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.drm_panel = type { i32 }
%struct.panel_lvds = type { %struct.TYPE_4__* }
%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i32, i32 }

@BL_CORE_FBBLANK = common dso_local global i32 0, align 4
@FB_BLANK_UNBLANK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.drm_panel*)* @panel_lvds_enable to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @panel_lvds_enable(%struct.drm_panel* %0) #0 {
  %2 = alloca %struct.drm_panel*, align 8
  %3 = alloca %struct.panel_lvds*, align 8
  store %struct.drm_panel* %0, %struct.drm_panel** %2, align 8
  %4 = load %struct.drm_panel*, %struct.drm_panel** %2, align 8
  %5 = call %struct.panel_lvds* @to_panel_lvds(%struct.drm_panel* %4)
  store %struct.panel_lvds* %5, %struct.panel_lvds** %3, align 8
  %6 = load %struct.panel_lvds*, %struct.panel_lvds** %3, align 8
  %7 = getelementptr inbounds %struct.panel_lvds, %struct.panel_lvds* %6, i32 0, i32 0
  %8 = load %struct.TYPE_4__*, %struct.TYPE_4__** %7, align 8
  %9 = icmp ne %struct.TYPE_4__* %8, null
  br i1 %9, label %10, label %30

10:                                               ; preds = %1
  %11 = load i32, i32* @BL_CORE_FBBLANK, align 4
  %12 = xor i32 %11, -1
  %13 = load %struct.panel_lvds*, %struct.panel_lvds** %3, align 8
  %14 = getelementptr inbounds %struct.panel_lvds, %struct.panel_lvds* %13, i32 0, i32 0
  %15 = load %struct.TYPE_4__*, %struct.TYPE_4__** %14, align 8
  %16 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %15, i32 0, i32 0
  %17 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %16, i32 0, i32 1
  %18 = load i32, i32* %17, align 4
  %19 = and i32 %18, %12
  store i32 %19, i32* %17, align 4
  %20 = load i32, i32* @FB_BLANK_UNBLANK, align 4
  %21 = load %struct.panel_lvds*, %struct.panel_lvds** %3, align 8
  %22 = getelementptr inbounds %struct.panel_lvds, %struct.panel_lvds* %21, i32 0, i32 0
  %23 = load %struct.TYPE_4__*, %struct.TYPE_4__** %22, align 8
  %24 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %23, i32 0, i32 0
  %25 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %24, i32 0, i32 0
  store i32 %20, i32* %25, align 4
  %26 = load %struct.panel_lvds*, %struct.panel_lvds** %3, align 8
  %27 = getelementptr inbounds %struct.panel_lvds, %struct.panel_lvds* %26, i32 0, i32 0
  %28 = load %struct.TYPE_4__*, %struct.TYPE_4__** %27, align 8
  %29 = call i32 @backlight_update_status(%struct.TYPE_4__* %28)
  br label %30

30:                                               ; preds = %10, %1
  ret i32 0
}

declare dso_local %struct.panel_lvds* @to_panel_lvds(%struct.drm_panel*) #1

declare dso_local i32 @backlight_update_status(%struct.TYPE_4__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
